# InfosVagasDados

./: .pre-commit-config.yaml  README.md  coletor_infos_vagas.py  pyproject.toml
